små fixes, text aligned til bunden af boxe er bedre nu

--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ h1, h2, h3 {
     font-size: 2.4375rem;
     font-weight: 700;
 }
+.hero__headline span {
+    color: #F78065;
+}
 
 .hero__txt {
     font-size: 1.25rem;
@@ -89,7 +92,7 @@ h1, h2, h3 {
     font-size: 1.125rem;
     font-weight: 700;
 
-    padding: 1.25rem 4.6875rem;
+    padding: 1.25rem 4.625rem;
     margin-top: 2rem;
 }
 
@@ -132,12 +135,6 @@ h1, h2, h3 {
     margin-bottom: 16.4375rem;
 }
 
-.facilities__card {
-    position: relative;
-
-    padding-bottom: 2.5rem;
-}
-
 .facilities__headline {
     font-size: 2.25rem;
 
@@ -148,6 +145,14 @@ h1, h2, h3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 2.875rem;
+}
+
+.facilities__card {
+    min-height: 16rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .facilities__card__img {
@@ -162,11 +167,13 @@ h1, h2, h3 {
 
 .facilities__card__txt {
     font-size: 0.875rem;
+    line-height: 1.5rem;
+
+    margin-bottom: 1rem;
 }
 
 .facilities__card__link {
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
 }
 
 
@@ -269,22 +276,25 @@ h1, h2, h3 {
 }
 
 .advantages__card {
-    position: relative;
+    min-height: 16rem;
 
-    padding-bottom: 6.6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .advantages__card__headline {
     font-size: 1.375rem;
 
     margin-top: 4rem;
+    margin-bottom: 1rem;
 }
 
 .advantages__card__txt {
-    position: absolute;
-    bottom: 0;
-
     font-size: 0.875rem;
+    line-height: 1.5rem;
+
+    margin-top: auto;
 }
 
 
